--- a/src/main/resources/assets/chisel/lang/de_DE.lang
+++ b/src/main/resources/assets/chisel/lang/de_DE.lang
@@ -15,6 +15,8 @@ item.chisel.chisel.desc.modes=Verfügt über mehrere Modi zum Meißeln.
 
 item.chisel.chisel_diamond.name=Diamantmeißel
 item.chisel.chisel_obsidian.name=Obsidianmeißel
+item.chisel.chisel_netherstar.name=Nethersternmeißel
+item.chisel.chisel_netherstar.gtnh.name=Bedrockiummeißel
 
 item.ballMoss.name=Moosball
 item.ballMoss.desc=Rechtsklick, um ihn zu werfen. Verwandelt Bruchstein in bemoosten Bruchstein.
