--- a/src/main/resources/assets/chisel/lang/en_US.lang
+++ b/src/main/resources/assets/chisel/lang/en_US.lang
@@ -16,7 +16,8 @@ item.chisel.chisel.desc.modes=Has multiple modes for chiseling.
 
 item.chisel.chisel_diamond.name=Diamond Chisel
 item.chisel.chisel_obsidian.name=Obsidian Chisel
-item.chisel.chisel_netherstar.name=Bedrockium Chisel
+item.chisel.chisel_netherstar.name=Nether Star Chisel
+item.chisel.chisel_netherstar.gtnh.name=Bedrockium Chisel
 
 item.ballMoss.name=Ball O' Moss
 item.ballMoss.desc=Right-Click to throw. This will turn Cobblestone to Moss Stone on impact.
