--- a/src/main/resources/assets/chisel/lang/ko_KR.lang
+++ b/src/main/resources/assets/chisel/lang/ko_KR.lang
@@ -15,6 +15,8 @@ item.chisel.chisel.desc.modes=변환 범위를 선택 할 수 있습니다.
 
 item.chisel.chisel_diamond.name=다이아몬드 끌
 item.chisel.chisel_obsidian.name=흑요석 끌
+item.chisel.chisel_netherstar.name=Nether Star Chisel
+item.chisel.chisel_netherstar.gtnh.name=Bedrockium Chisel
 
 item.ballMoss.name=이끼 공
 item.ballMoss.desc=우클릭으로 던지기. 돌과 조약돌에 이끼가 낍니다.
