--- a/src/main/resources/assets/chisel/lang/en_US.lang
+++ b/src/main/resources/assets/chisel/lang/en_US.lang
@@ -1767,41 +1767,41 @@ tile.cubit.15.desc=Cubit(15)
 
 #Hempcrete
 tile.chisel.hempcrete.name=Hempcrete
-tile.hempcrete.0.desc=Black
-tile.hempcrete.1.desc=Gray
-tile.hempcrete.2.desc=Silver
-tile.hempcrete.3.desc=White
-tile.hempcrete.4.desc=Light Blue
-tile.hempcrete.5.desc=Cyan
-tile.hempcrete.6.desc=Blue
-tile.hempcrete.7.desc=Purple
-tile.hempcrete.8.desc=Magenta
-tile.hempcrete.9.desc=Pink
-tile.hempcrete.10.desc=Red
-tile.hempcrete.11.desc=Orange
-tile.hempcrete.12.desc=Yellow
-tile.hempcrete.13.desc=Lime
-tile.hempcrete.14.desc=Green
-tile.hempcrete.15.desc=Brown
+tile.hempcrete.0.desc=White
+tile.hempcrete.1.desc=Orange
+tile.hempcrete.2.desc=Magenta
+tile.hempcrete.3.desc=Light Blue
+tile.hempcrete.4.desc=Yellow
+tile.hempcrete.5.desc=Light Green
+tile.hempcrete.6.desc=Pink
+tile.hempcrete.7.desc=Gray
+tile.hempcrete.8.desc=Light Gray
+tile.hempcrete.9.desc=Cyan
+tile.hempcrete.10.desc=Purple
+tile.hempcrete.11.desc=Blue
+tile.hempcrete.12.desc=Brown
+tile.hempcrete.13.desc=Green
+tile.hempcrete.14.desc=Red
+tile.hempcrete.15.desc=Black
 
 #hempcreteSand
 tile.chisel.hempcretesand.name=Hempcrete powder
-tile.hempcretesand.0.desc=Black
-tile.hempcretesand.1.desc=Gray
-tile.hempcretesand.2.desc=Silver
-tile.hempcretesand.3.desc=White
-tile.hempcretesand.4.desc=Light Blue
-tile.hempcretesand.5.desc=Cyan
-tile.hempcretesand.6.desc=Blue
-tile.hempcretesand.7.desc=Purple
-tile.hempcretesand.8.desc=Magenta
-tile.hempcretesand.9.desc=Pink
-tile.hempcretesand.10.desc=Red
-tile.hempcretesand.11.desc=Orange
-tile.hempcretesand.12.desc=Yellow
-tile.hempcretesand.13.desc=Lime
-tile.hempcretesand.14.desc=Green
-tile.hempcretesand.15.desc=Brown
+tile.hempcretesand.0.desc=White
+tile.hempcretesand.1.desc=Orange
+tile.hempcretesand.2.desc=Magenta
+tile.hempcretesand.3.desc=Light Blue
+tile.hempcretesand.4.desc=Yellow
+tile.hempcretesand.5.desc=Light Green
+tile.hempcretesand.6.desc=Pink
+tile.hempcretesand.7.desc=Gray
+tile.hempcretesand.8.desc=Light Gray
+tile.hempcretesand.9.desc=Cyan
+tile.hempcretesand.10.desc=Purple
+tile.hempcretesand.11.desc=Blue
+tile.hempcretesand.12.desc=Brown
+tile.hempcretesand.13.desc=Green
+tile.hempcretesand.14.desc=Red
+tile.hempcretesand.15.desc=Black
 
 #Sveltsone
 tile.chisel.sveltstone.name=Svelstone block
